# PlAIster

./: README.md  ReadMe.odt  ReadMe.txt  run.py
crownstone-scanner-master/: CMakeLists.txt  README.md
crownstone-scanner-master/cmake/modules/: Findblepp.cmake
crownstone-scanner-master/scripts/: set_permission.sh
crownstone-scanner-master/scripts/hcitool/: create_beacon.sh  restart_bluetooth.sh  scan.sh  whitelist_scan.sh
crownstone-scanner-master/src/: crownstone.cc
dashboard/: __init__.py  config.py  models.py  site.db
dashboard/charts/: routes.py
dashboard/device/: forms.py  routes.py
dashboard/main/: routes.py
dashboard/plots/: routes.py
dashboard/static/js/: chart-vis.js
dashboard/templates/: about.html  charts.html  create_device.html  details.html  home.html  layout.html  login.html  plot_device.html  plots.html  validlist.html
dashboard/users/: forms.py  routes.py
